--- a/app/src/main/res/layout/activity_intro_01.xml
+++ b/app/src/main/res/layout/activity_intro_01.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                    xmlns:app="http://schemas.android.com/apk/res-auto"
-                                                   xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
+                                                   xmlns:tools="http://schemas.android.com/tools"
+                                                   android:orientation="vertical"
                                                    android:layout_width="match_parent"
                                                    android:layout_height="match_parent">
     <ImageView
@@ -9,46 +10,66 @@
             app:srcCompat="@drawable/ic_logo"
             android:layout_width="335dp"
             android:layout_height="119dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginBottom="64dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.35"
-    />
+            app:layout_constraintBottom_toTopOf="@+id/activity_intro_1_1"/>
     <TextView
             android:id="@+id/activity_intro_1_1"
             android:text="@string/activity_intro_1_1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:textColor="@color/font_color"
-            android:textStyle="bold"
-            android:textSize="18sp"
-            app:layout_constraintVertical_bias="0.65"
+            android:textSize="14sp"
+            app:layout_constraintVertical_bias="0.50"
     />
     <TextView
             android:id="@+id/activity_intro_1_2"
             android:text="@string/activity_intro_1_2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="32dp"
-            android:layout_marginBottom="16dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/activity_intro_1_1"
+            app:layout_constraintTop_toBottomOf="@+id/activity_intro_1_1"
+            app:layout_constraintEnd_toEndOf="@+id/activity_intro_1_1"
             android:textColor="@color/font_color"
-            android:textStyle="bold"
-            android:textSize="18sp"
-            app:layout_constraintVertical_bias="0.70"
+            android:textSize="14sp"
+            android:layout_marginTop="16dp"
     />
+    <ImageView
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            app:srcCompat="@drawable/ic_site"
+            android:id="@+id/site"
+            app:layout_constraintEnd_toStartOf="@+id/telegram"
+            app:layout_constraintTop_toTopOf="@+id/telegram"
+            app:layout_constraintBottom_toBottomOf="@+id/telegram"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintVertical_bias="0.7"
+    />
+    <ImageView
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            app:srcCompat="@drawable/ic_telegram"
+            android:id="@+id/telegram"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/activity_intro_1_2"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="64dp"
+    />
+    <ImageView
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            app:srcCompat="@drawable/ic_vk"
+            android:id="@+id/vk"
+            app:layout_constraintStart_toEndOf="@+id/telegram"
+            app:layout_constraintTop_toTopOf="@+id/telegram"
+            app:layout_constraintBottom_toBottomOf="@+id/telegram"
+            android:layout_marginStart="16dp"
+            app:layout_constraintVertical_bias="0.7"
+    />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
