--- a/app/src/main/res/layout/activity_intro_01.xml
+++ b/app/src/main/res/layout/activity_intro_01.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                    xmlns:app="http://schemas.android.com/apk/res-auto"
-                                                   xmlns:tools="http://schemas.android.com/tools"
                                                    android:orientation="vertical"
                                                    android:layout_width="match_parent"
                                                    android:layout_height="match_parent">
@@ -13,7 +12,8 @@
             android:layout_marginBottom="64dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/activity_intro_1_1"/>
+            app:layout_constraintBottom_toTopOf="@+id/activity_intro_1_1"
+    />
     <TextView
             android:id="@+id/activity_intro_1_1"
             android:text="@string/activity_intro_1_1"
@@ -48,7 +48,6 @@
             app:layout_constraintTop_toTopOf="@+id/telegram"
             app:layout_constraintBottom_toBottomOf="@+id/telegram"
             android:layout_marginEnd="16dp"
-            app:layout_constraintVertical_bias="0.7"
     />
     <ImageView
             android:layout_width="32dp"
@@ -69,7 +68,6 @@
             app:layout_constraintTop_toTopOf="@+id/telegram"
             app:layout_constraintBottom_toBottomOf="@+id/telegram"
             android:layout_marginStart="16dp"
-            app:layout_constraintVertical_bias="0.7"
     />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
