--- a/app/src/main/res/layout/intro_01.xml
+++ b/app/src/main/res/layout/intro_01.xml
@@ -44,16 +44,16 @@
             android:layout_height="32dp"
             app:srcCompat="@drawable/ic_site"
             android:id="@+id/site"
-            app:layout_constraintEnd_toStartOf="@+id/telegram"
-            app:layout_constraintTop_toTopOf="@+id/telegram"
-            app:layout_constraintBottom_toBottomOf="@+id/telegram"
+            app:layout_constraintEnd_toStartOf="@+id/bottom_10"
+            app:layout_constraintTop_toTopOf="@+id/bottom_10"
+            app:layout_constraintBottom_toBottomOf="@+id/bottom_10"
             android:layout_marginEnd="16dp"
     />
     <ImageView
             android:layout_width="32dp"
             android:layout_height="32dp"
             app:srcCompat="@drawable/ic_telegram"
-            android:id="@+id/telegram"
+            android:id="@+id/bottom_10"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/activity_intro_1_2"
             app:layout_constraintEnd_toEndOf="parent"
@@ -63,10 +63,10 @@
             android:layout_width="32dp"
             android:layout_height="32dp"
             app:srcCompat="@drawable/ic_vk"
-            android:id="@+id/vk"
-            app:layout_constraintStart_toEndOf="@+id/telegram"
-            app:layout_constraintTop_toTopOf="@+id/telegram"
-            app:layout_constraintBottom_toBottomOf="@+id/telegram"
+            android:id="@+id/bottom_03"
+            app:layout_constraintStart_toEndOf="@+id/bottom_10"
+            app:layout_constraintTop_toTopOf="@+id/bottom_10"
+            app:layout_constraintBottom_toBottomOf="@+id/bottom_10"
             android:layout_marginStart="16dp"
     />
 
