--- a/app/src/main/res/layout/card_vacancy.xml
+++ b/app/src/main/res/layout/card_vacancy.xml
@@ -7,10 +7,10 @@
         tools:context=".MainActivity"
 >
     <ImageView
-            android:id="@+id/card_vacancy_close"
-            android:layout_width="0dp"
+            android:id="@+id/background"
+            android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:background="@color/theme_1_card"
+            android:background="@drawable/shape_card"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -20,12 +20,12 @@
             android:layout_marginEnd="16dp"
     />
     <TextView
-            android:id="@+id/vacancy_name"
+            android:id="@+id/name"
             android:text="@string/card_vacancy_close_vacancy_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="@id/card_vacancy_close"
-            app:layout_constraintStart_toStartOf="@id/card_vacancy_close"
+            app:layout_constraintTop_toTopOf="@id/background"
+            app:layout_constraintStart_toStartOf="@id/background"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:textSize="18sp"
@@ -33,13 +33,13 @@
             android:textColor="@color/font_color"
     />
     <ImageView
+            android:id="@+id/eye"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/eye"
             app:srcCompat="@drawable/ic_eye"
-            app:layout_constraintStart_toEndOf="@+id/vacancy_name"
-            app:layout_constraintTop_toTopOf="@+id/vacancy_name"
-            app:layout_constraintBottom_toBottomOf="@+id/vacancy_name"
+            app:layout_constraintStart_toEndOf="@+id/name"
+            app:layout_constraintTop_toTopOf="@+id/name"
+            app:layout_constraintBottom_toBottomOf="@+id/name"
             android:layout_marginStart="8dp"
     />
     <TextView
@@ -49,8 +49,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            app:layout_constraintTop_toTopOf="@+id/card_vacancy_close"
-            app:layout_constraintEnd_toEndOf="@+id/card_vacancy_close"
+            app:layout_constraintTop_toTopOf="@+id/background"
+            app:layout_constraintEnd_toEndOf="@+id/background"
             android:textSize="14sp"
             android:textStyle="bold"
             android:textColor="@color/font_color"
@@ -73,8 +73,8 @@
             android:text="@string/card_vacancy_close_required_competencies_headline"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="@+id/card_vacancy_close"
-            app:layout_constraintTop_toBottomOf="@+id/vacancy_name"
+            app:layout_constraintStart_toStartOf="@+id/background"
+            app:layout_constraintTop_toBottomOf="@+id/name"
             app:layout_constraintEnd_toStartOf="@+id/experienced"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
@@ -88,8 +88,8 @@
             android:text="@string/card_vacancy_close_required_competencies_text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="@+id/card_vacancy_close"
-            app:layout_constraintEnd_toEndOf="@+id/card_vacancy_close"
+            app:layout_constraintStart_toStartOf="@+id/background"
+            app:layout_constraintEnd_toEndOf="@+id/background"
             app:layout_constraintTop_toBottomOf="@+id/required_competencies_headline"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
@@ -102,9 +102,9 @@
         android:text="@string/card_vacancy_close_work_format_headline"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="@+id/card_vacancy_close"
+        app:layout_constraintStart_toStartOf="@+id/background"
         app:layout_constraintTop_toBottomOf="@+id/required_competencies_text"
-        app:layout_constraintEnd_toEndOf="@+id/card_vacancy_close"
+        app:layout_constraintEnd_toEndOf="@+id/background"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
@@ -117,9 +117,9 @@
             android:text="@string/card_vacancy_close_work_format_text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="@+id/card_vacancy_close"
+            app:layout_constraintStart_toStartOf="@+id/background"
             app:layout_constraintTop_toBottomOf="@+id/work_format_headline"
-            app:layout_constraintEnd_toEndOf="@+id/card_vacancy_close"
+            app:layout_constraintEnd_toEndOf="@+id/background"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:textSize="14sp"
@@ -131,9 +131,9 @@
             android:text="@string/card_vacancy_close_employment_headline"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="@+id/card_vacancy_close"
+            app:layout_constraintStart_toStartOf="@+id/background"
             app:layout_constraintTop_toBottomOf="@+id/work_format_text"
-            app:layout_constraintEnd_toEndOf="@+id/card_vacancy_close"
+            app:layout_constraintEnd_toEndOf="@+id/background"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
@@ -146,9 +146,9 @@
             android:text="@string/card_vacancy_close_employment_text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="@+id/card_vacancy_close"
+            app:layout_constraintStart_toStartOf="@+id/background"
             app:layout_constraintTop_toBottomOf="@+id/employment_headline"
-            app:layout_constraintEnd_toEndOf="@+id/card_vacancy_close"
+            app:layout_constraintEnd_toEndOf="@+id/background"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:textSize="14sp"
@@ -161,9 +161,9 @@
             android:text="@string/card_vacancy_open_company_description_headline"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="@+id/card_vacancy_close"
+            app:layout_constraintStart_toStartOf="@+id/background"
             app:layout_constraintTop_toBottomOf="@+id/employment_format_text"
-            app:layout_constraintEnd_toEndOf="@+id/card_vacancy_close"
+            app:layout_constraintEnd_toEndOf="@+id/background"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
@@ -177,9 +177,9 @@
             android:text="@string/card_vacancy_open_company_description_text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="@+id/card_vacancy_close"
+            app:layout_constraintStart_toStartOf="@+id/background"
             app:layout_constraintTop_toBottomOf="@+id/company_description_headline"
-            app:layout_constraintEnd_toEndOf="@+id/card_vacancy_close"
+            app:layout_constraintEnd_toEndOf="@+id/background"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:textSize="14sp"
@@ -192,9 +192,9 @@
             android:text="@string/card_vacancy_open_vacancy_description_headline"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="@+id/card_vacancy_close"
+            app:layout_constraintStart_toStartOf="@+id/background"
             app:layout_constraintTop_toBottomOf="@+id/сompany_description_text"
-            app:layout_constraintEnd_toEndOf="@+id/card_vacancy_close"
+            app:layout_constraintEnd_toEndOf="@+id/background"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
@@ -208,9 +208,9 @@
             android:text="@string/card_vacancy_open_vacancy_description_text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="@+id/card_vacancy_close"
+            app:layout_constraintStart_toStartOf="@+id/background"
             app:layout_constraintTop_toBottomOf="@+id/vacancy_description_headline"
-            app:layout_constraintEnd_toEndOf="@+id/card_vacancy_close"
+            app:layout_constraintEnd_toEndOf="@+id/background"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:textSize="14sp"
@@ -223,9 +223,9 @@
             android:text="@string/card_vacancy_open_requirements_description_headline"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="@+id/card_vacancy_close"
+            app:layout_constraintStart_toStartOf="@+id/background"
             app:layout_constraintTop_toBottomOf="@+id/vacancy_description_text"
-            app:layout_constraintEnd_toEndOf="@+id/card_vacancy_close"
+            app:layout_constraintEnd_toEndOf="@+id/background"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
@@ -239,9 +239,9 @@
             android:text="@string/card_vacancy_open_requirements_description_text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="@+id/card_vacancy_close"
+            app:layout_constraintStart_toStartOf="@+id/background"
             app:layout_constraintTop_toBottomOf="@+id/requirements_description_headline"
-            app:layout_constraintEnd_toEndOf="@+id/card_vacancy_close"
+            app:layout_constraintEnd_toEndOf="@+id/background"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:textSize="14sp"
@@ -254,9 +254,9 @@
             android:text="@string/card_vacancy_open_duties_description_headline"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="@+id/card_vacancy_close"
+            app:layout_constraintStart_toStartOf="@+id/background"
             app:layout_constraintTop_toBottomOf="@+id/requirements_description_text"
-            app:layout_constraintEnd_toEndOf="@+id/card_vacancy_close"
+            app:layout_constraintEnd_toEndOf="@+id/background"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
@@ -270,9 +270,9 @@
             android:text="@string/card_vacancy_open_duties_description_text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="@+id/card_vacancy_close"
+            app:layout_constraintStart_toStartOf="@+id/background"
             app:layout_constraintTop_toBottomOf="@+id/duties_description_headline"
-            app:layout_constraintEnd_toEndOf="@+id/card_vacancy_close"
+            app:layout_constraintEnd_toEndOf="@+id/background"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:textSize="14sp"
@@ -285,9 +285,9 @@
             android:text="@string/card_vacancy_open_conditions_description_headline"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="@+id/card_vacancy_close"
+            app:layout_constraintStart_toStartOf="@+id/background"
             app:layout_constraintTop_toBottomOf="@+id/duties_description_text"
-            app:layout_constraintEnd_toEndOf="@+id/card_vacancy_close"
+            app:layout_constraintEnd_toEndOf="@+id/background"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
@@ -301,9 +301,9 @@
             android:text="@string/card_vacancy_open_conditions_description_text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="@+id/card_vacancy_close"
+            app:layout_constraintStart_toStartOf="@+id/background"
             app:layout_constraintTop_toBottomOf="@+id/conditions_description_headline"
-            app:layout_constraintEnd_toEndOf="@+id/card_vacancy_close"
+            app:layout_constraintEnd_toEndOf="@+id/background"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:textSize="14sp"
@@ -315,9 +315,9 @@
             android:layout_width="0dp"
             android:layout_height="1dp"
             android:background="@color/theme_1_hover"
-            app:layout_constraintStart_toStartOf="@+id/card_vacancy_close"
+            app:layout_constraintStart_toStartOf="@+id/background"
             app:layout_constraintTop_toBottomOf="@+id/conditions_description_text"
-            app:layout_constraintEnd_toEndOf="@+id/card_vacancy_close"
+            app:layout_constraintEnd_toEndOf="@+id/background"
             android:layout_marginVertical="16dp"
     />
     <TextView
@@ -325,7 +325,7 @@
             android:text="@string/card_vacancy_close_company_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="@+id/card_vacancy_close"
+            app:layout_constraintStart_toStartOf="@+id/background"
             app:layout_constraintTop_toBottomOf="@+id/divider"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
@@ -350,7 +350,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="@+id/company_name"
-            app:layout_constraintEnd_toEndOf="@+id/card_vacancy_close"
+            app:layout_constraintEnd_toEndOf="@+id/background"
             app:layout_constraintBottom_toBottomOf="@+id/company_name"
             android:layout_marginEnd="16dp"
             android:textSize="16sp"
@@ -362,9 +362,9 @@
             android:text="@string/card_vacancy_close_address"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="@+id/card_vacancy_close"
+            app:layout_constraintStart_toStartOf="@+id/background"
             app:layout_constraintTop_toBottomOf="@+id/company_name"
-            app:layout_constraintEnd_toEndOf="@+id/card_vacancy_close"
+            app:layout_constraintEnd_toEndOf="@+id/background"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
@@ -377,9 +377,9 @@
             app:menu="@menu/card_vacancy"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="@+id/card_vacancy_close"
+            app:layout_constraintStart_toStartOf="@+id/background"
             app:layout_constraintTop_toBottomOf="@+id/address"
-            app:layout_constraintEnd_toEndOf="@+id/card_vacancy_close"
+            app:layout_constraintEnd_toEndOf="@+id/background"
             android:layout_marginTop="16dp"
             android:background="@color/theme_1_color_1"
             app:itemIconTint="@color/font_color"
