--- a/app/src/main/res/layout/intro_05.xml
+++ b/app/src/main/res/layout/intro_05.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
+                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
+                                                   xmlns:tools="http://schemas.android.com/tools"
+                                                   android:orientation="vertical"
                                                    android:layout_width="match_parent"
                                                    android:layout_height="match_parent">
     <TextView
@@ -34,5 +36,16 @@
             android:textStyle="bold"
             android:textSize="18sp"
             app:layout_constraintVertical_bias="0.68"
+    />
+    <Button
+            android:id="@+id/start"
+            android:text="@string/intro_05_start"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
+            android:background="@drawable/shape_button"
     />
 </androidx.constraintlayout.widget.ConstraintLayout>
