--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,21 +12,6 @@
         <item name="colorPrimaryDark">@color/font_color</item>
     </style>
 
-    <style name="menu_bottom_tab_layout" parent="Base.Widget.Design.TabLayout">
-        <item name="tabTextAppearance">@style/menu_bottom_tab_layout_text</item>
-        <item name="tabPaddingStart">0dp</item>
-        <item name="tabPaddingEnd">0dp</item>
-        <item name="tabTextColor">@color/font_color</item>
-        <item name="tabSelectedTextColor">@color/font_color</item>
-        <item name="tabIndicatorColor">@color/font_color</item>
-        <item name="android:background">@color/theme_1_color_1</item>
-    </style>
-
-    <style name="menu_bottom_tab_layout_text" parent="TextAppearance.AppCompat.Button">
-        <item name="android:textSize">10sp</item>
-        <item name="android:textStyle">normal</item>
-    </style>
-
     <style name="menu_left_tab_layout" parent="Base.Widget.Design.TabLayout">
         <item name="tabTextAppearance">@style/menu_left_tab_layout_text</item>
         <item name="tabTextColor">@color/font_color</item>
@@ -38,6 +23,10 @@
     <style name="menu_left_tab_layout_text" parent="TextAppearance.AppCompat.Button">
         <item name="android:textSize">10sp</item>
         <item name="android:textStyle">normal</item>
+    </style>
+
+    <style name="dffdg">
+        <item name="android:radius">8dp</item>
     </style>
 
 </resources>
