--- a/app/src/main/res/drawable/ic_gmail.xml
+++ b/app/src/main/res/drawable/ic_gmail.xml
@@ -1,8 +1,8 @@
 <vector
-        android:viewportWidth="512"
-        android:viewportHeight="512"
-        android:width="32dp"
         android:height="32dp"
+        android:viewportHeight="512"
+        android:viewportWidth="488"
+        android:width="32dp"
         xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@color/font_color" android:pathData="M464,64L48,64C21.49,64 0,85.49 0,112v288c0,26.51 21.49,48 48,48h416c26.51,0 48,-21.49 48,-48L512,112c0,-26.51 -21.49,-48 -48,-48zM464,112v40.805c-22.422,18.259 -58.168,46.651 -134.587,106.49 -16.841,13.247 -50.201,45.072 -73.413,44.701 -23.208,0.375 -56.579,-31.459 -73.413,-44.701C106.18,199.465 70.425,171.067 48,152.805L48,112h416zM48,400L48,214.398c22.914,18.251 55.409,43.862 104.938,82.646 21.857,17.205 60.134,55.186 103.062,54.955 42.717,0.231 80.509,-37.199 103.053,-54.947 49.528,-38.783 82.032,-64.401 104.947,-82.653L464,400L48,400z"/>
+    <path android:fillColor="@color/font_color" android:pathData="M488,261.8C488,403.3 391.1,504 248,504 110.8,504 0,393.2 0,256S110.8,8 248,8c66.8,0 123,24.5 166.3,64.9l-67.5,64.9C258.5,52.6 94.3,116.6 94.3,256c0,86.5 69.1,156.6 153.7,156.6 98.2,0 135,-70.4 140.8,-106.9H248v-85.3h236.1c2.3,12.7 3.9,24.9 3.9,41.4z"/>
 </vector>
