--- a/app/src/main/res/layout/account_management_other_account_not_tied.xml
+++ b/app/src/main/res/layout/account_management_other_account_not_tied.xml
@@ -6,38 +6,38 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity"
 >
+
+
     <ImageView
             android:id="@+id/background"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:background="@drawable/shape_card"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_margin="16dp"
     />
-    <EditText
-            android:id="@+id/registration_mail"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:hint="@string/mail_1"
-            app:layout_constraintStart_toStartOf="@+id/background"
-            app:layout_constraintEnd_toEndOf="@id/background"
-            android:layout_marginHorizontal="16dp"
-            android:textSize="18sp"
-            android:textColor="@color/font_color"
-            android:inputType="textEmailAddress"
-            android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="@+id/background"/>
-    <Button
-            android:id="@+id/next"
-            android:text="@string/ready"
+    <include
+            android:id="@+id/include_social_network"
+            layout="@layout/c_social_network"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="@+id/background"
+            app:layout_constraintStart_toStartOf="@+id/background"
+            app:layout_constraintEnd_toEndOf="@+id/background"
+            android:layout_margin="16dp"
+    />
+    <Button
+            android:id="@+id/close"
+            android:text="@string/close"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/shape_button"
             app:layout_constraintEnd_toEndOf="@+id/background"
             app:layout_constraintBottom_toBottomOf="@+id/background"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
-            android:background="@drawable/shape_button"
     />
 </androidx.constraintlayout.widget.ConstraintLayout>
