--- a/app/src/main/res/layout/authorization_phone.xml
+++ b/app/src/main/res/layout/authorization_phone.xml
@@ -17,76 +17,69 @@
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_margin="16dp"
     />
-    <ImageButton
-            android:id="@+id/logo"
-            android:layout_width="180dp"
-            android:layout_height="180dp"
-            app:srcCompat="@color/background"
-            android:layout_marginTop="16dp"
-            app:layout_constraintEnd_toEndOf="@+id/background"
+    <include
+            android:id="@+id/include_social_network"
+            layout="@layout/c_social_network"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="@+id/background"
             app:layout_constraintStart_toStartOf="@+id/background"
+            app:layout_constraintEnd_toEndOf="@+id/background"
+            android:layout_margin="16dp"
     />
     <EditText
-            android:id="@+id/surname"
+            android:id="@+id/registration_phone"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:inputType="text"
-            android:hint="@string/surname"
+            android:hint="@string/phone"
+            app:layout_constraintTop_toBottomOf="@+id/include_social_network"
             app:layout_constraintStart_toStartOf="@+id/background"
             app:layout_constraintEnd_toEndOf="@+id/background"
-            app:layout_constraintTop_toBottomOf="@+id/logo"
             android:layout_marginTop="16dp"
             android:layout_marginHorizontal="16dp"
             android:textSize="18sp"
             android:textColor="@color/font_color"
-    />
-    <EditText
-            android:id="@+id/name"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:inputType="text"
-            android:hint="@string/name"
-            app:layout_constraintTop_toBottomOf="@+id/surname"
-            app:layout_constraintStart_toStartOf="@+id/surname"
-            app:layout_constraintEnd_toEndOf="@+id/surname"
-            android:layout_marginTop="16dp"
-            android:textSize="18sp"
-            android:textColor="@color/font_color"
-    />
-    <EditText
-            android:id="@+id/middle_name"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:inputType="text"
-            android:hint="@string/middle_name"
-            app:layout_constraintTop_toBottomOf="@+id/name"
-            app:layout_constraintStart_toStartOf="@+id/surname"
-            app:layout_constraintEnd_toEndOf="@+id/surname"
-            android:layout_marginTop="16dp"
-            android:textSize="18sp"
-            android:textColor="@color/font_color"
+            android:inputType="phone"
     />
     <Button
-            android:id="@+id/back"
-            android:text="@string/back"
+            android:id="@+id/phone_code_send"
+            android:text="@string/phone_code_send"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@drawable/shape_button"
+            app:layout_constraintTop_toBottomOf="@+id/registration_phone"
             app:layout_constraintStart_toStartOf="@+id/background"
+            app:layout_constraintEnd_toEndOf="@+id/background"
+            android:layout_marginTop="16dp"
+    />
+    <EditText
+            android:id="@+id/registration_phone_code"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:hint="@string/phone_code"
+            app:layout_constraintTop_toBottomOf="@+id/phone_code_send"
+            android:layout_marginTop="16dp"
+            android:textSize="18sp"
+            android:textColor="@color/font_color"
+            android:inputType="numberPassword"
+            app:layout_constraintStart_toStartOf="@+id/registration_phone"
+            app:layout_constraintEnd_toEndOf="@+id/registration_phone"/>
+    <Button
+            android:id="@+id/back"
+            android:text="@string/close"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="@+id/background"
-            android:layout_marginStart="16dp"
             android:layout_marginBottom="16dp"
             android:background="@drawable/shape_button"
-    />
+            app:layout_constraintEnd_toEndOf="@+id/background" android:layout_marginEnd="16dp"/>
     <Button
-            android:id="@+id/next"
-            android:text="@string/next"
+            android:id="@+id/ready"
+            android:text="@string/enter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="@+id/background"
-            app:layout_constraintBottom_toBottomOf="@+id/background"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="16dp"
             android:background="@drawable/shape_button"
-    />
+            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/registration_phone_code"
+            app:layout_constraintStart_toStartOf="@+id/background"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
