--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -14,7 +14,7 @@
             android:id="@+id/include_01"
     />
     <include
-            layout="@layout/menu_bottom"
+            layout="@layout/c_menu_bottom"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
