--- a/app/src/main/res/layout/password_change.xml
+++ b/app/src/main/res/layout/password_change.xml
@@ -24,7 +24,7 @@
             android:id="@+id/registration_password_1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="@string/registration_01_registration_password_2"
+            android:hint="@string/password_2"
             app:layout_constraintTop_toTopOf="@+id/background"
             app:layout_constraintStart_toStartOf="@+id/background"
             app:layout_constraintEnd_toEndOf="@id/background"
@@ -39,7 +39,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:inputType="textPassword|numberPassword"
-            android:hint="@string/registration_01_registration_password_3"
+            android:hint="@string/password_3"
             app:layout_constraintTop_toBottomOf="@+id/registration_password_1"
             app:layout_constraintStart_toStartOf="@+id/registration_password_1"
             app:layout_constraintEnd_toEndOf="@+id/registration_password_1"
@@ -52,7 +52,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:inputType="textPassword|numberPassword"
-            android:hint="@string/registration_01_registration_password_4"
+            android:hint="@string/password_4"
             app:layout_constraintTop_toBottomOf="@+id/registration_password_2"
             app:layout_constraintStart_toStartOf="@+id/registration_password_1"
             app:layout_constraintEnd_toEndOf="@+id/registration_password_1"
@@ -62,7 +62,7 @@
     />
     <Button
             android:id="@+id/next"
-            android:text="@string/button_next"
+            android:text="@string/next"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="@+id/background"
