--- a/app/src/main/res/layout/registration_01_other.xml
+++ b/app/src/main/res/layout/registration_01_other.xml
@@ -17,56 +17,41 @@
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_margin="16dp"
     />
-    <ImageButton
-            android:id="@+id/logo"
-            android:layout_width="180dp"
-            android:layout_height="180dp"
-            app:srcCompat="@color/background"
-            android:layout_marginTop="16dp"
-            app:layout_constraintEnd_toEndOf="@+id/background"
-            app:layout_constraintTop_toTopOf="@+id/background"
-            app:layout_constraintStart_toStartOf="@+id/background"
-    />
     <EditText
-            android:id="@+id/surname"
+            android:id="@+id/referral_link"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:inputType="text"
-            android:hint="@string/surname"
-            app:layout_constraintStart_toStartOf="@+id/background"
-            app:layout_constraintEnd_toEndOf="@+id/background"
-            app:layout_constraintTop_toBottomOf="@+id/logo"
-            android:layout_marginTop="16dp"
+            android:hint="@string/referral_link"
+            app:layout_constraintStart_toStartOf="@id/background"
+            app:layout_constraintTop_toTopOf="@id/background"
+            app:layout_constraintEnd_toEndOf="@id/background"
             android:layout_marginHorizontal="16dp"
-            android:textSize="18sp"
-            android:textColor="@color/font_color"
-    />
-    <EditText
-            android:id="@+id/name"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:inputType="text"
-            android:hint="@string/name"
-            app:layout_constraintTop_toBottomOf="@+id/surname"
-            app:layout_constraintStart_toStartOf="@+id/surname"
-            app:layout_constraintEnd_toEndOf="@+id/surname"
             android:layout_marginTop="16dp"
             android:textSize="18sp"
-            android:textColor="@color/font_color"
     />
-    <EditText
-            android:id="@+id/middle_name"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:inputType="text"
-            android:hint="@string/middle_name"
-            app:layout_constraintTop_toBottomOf="@+id/name"
-            app:layout_constraintStart_toStartOf="@+id/surname"
-            app:layout_constraintEnd_toEndOf="@+id/surname"
-            android:layout_marginTop="16dp"
+    <TextView
+            android:id="@+id/referral_message"
+            android:text="@string/referral_message"
             android:textSize="18sp"
-            android:textColor="@color/font_color"
+            android:textColor="@color/online"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/referral_link"
+            app:layout_constraintStart_toStartOf="@+id/referral_link"
+            app:layout_constraintEnd_toEndOf="@+id/referral_link"
+            android:layout_marginTop="16dp"
     />
+    <include
+            android:id="@+id/include_social_network"
+            layout="@layout/c_social_network"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="@+id/background"
+            app:layout_constraintEnd_toEndOf="@+id/background"
+            android:layout_margin="16dp"
+            app:layout_constraintHorizontal_bias="0.466" android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/referral_message"/>
     <Button
             android:id="@+id/back"
             android:text="@string/back"
@@ -83,10 +68,8 @@
             android:text="@string/next"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="@+id/background"
             app:layout_constraintBottom_toBottomOf="@+id/background"
-            android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
             android:background="@drawable/shape_button"
-    />
+            app:layout_constraintEnd_toEndOf="@+id/background" android:layout_marginEnd="16dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
