--- a/app/src/main/res/layout/account_management_phone_accaunt_not_tied.xml
+++ b/app/src/main/res/layout/account_management_phone_accaunt_not_tied.xml
@@ -30,7 +30,7 @@
             android:layout_margin="16dp"
     />
     <EditText
-            android:id="@+id/registration_phone"
+            android:id="@+id/phone"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:hint="@string/phone"
@@ -49,13 +49,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/shape_button"
-            app:layout_constraintTop_toBottomOf="@+id/registration_phone"
+            app:layout_constraintTop_toBottomOf="@+id/phone"
             app:layout_constraintStart_toStartOf="@+id/background"
             app:layout_constraintEnd_toEndOf="@+id/background"
             android:layout_marginTop="16dp"
     />
     <EditText
-            android:id="@+id/registration_phone_code"
+            android:id="@+id/phone_code"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:hint="@string/phone_code"
@@ -64,8 +64,8 @@
             android:inputType="numberPassword"
             android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@+id/phone_code_send"
-            app:layout_constraintEnd_toEndOf="@+id/registration_phone"
-            app:layout_constraintStart_toStartOf="@+id/registration_phone"
+            app:layout_constraintEnd_toEndOf="@+id/phone"
+            app:layout_constraintStart_toStartOf="@+id/phone"
     />
     <Button
             android:id="@+id/bind_account"
@@ -75,7 +75,7 @@
             android:background="@drawable/shape_button"
             app:layout_constraintStart_toStartOf="@+id/background" app:layout_constraintEnd_toEndOf="@+id/background"
             app:layout_constraintHorizontal_bias="0.474" android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/registration_phone_code"/>
+            app:layout_constraintTop_toBottomOf="@+id/phone_code"/>
     <Button
             android:id="@+id/close"
             android:text="@string/close"
