--- a/app/src/main/res/layout/authorization_other.xml
+++ b/app/src/main/res/layout/authorization_other.xml
@@ -11,9 +11,9 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:background="@drawable/shape_card"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_margin="16dp"
     />
@@ -25,15 +25,6 @@
             app:layout_constraintTop_toTopOf="@+id/background"
             app:layout_constraintStart_toStartOf="@+id/background"
             app:layout_constraintEnd_toEndOf="@+id/background"
-            android:layout_margin="16dp"
+            android:layout_marginTop="16dp"
     />
-    <Button
-            android:id="@+id/back"
-            android:text="@string/close"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="@+id/background"
-            android:layout_marginBottom="16dp"
-            android:background="@drawable/shape_button"
-            app:layout_constraintEnd_toEndOf="@+id/background" android:layout_marginEnd="16dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
