--- a/app/src/main/res/layout/authorization_phone.xml
+++ b/app/src/main/res/layout/authorization_phone.xml
@@ -11,9 +11,9 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:background="@drawable/shape_card"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_margin="16dp"
     />
@@ -25,61 +25,53 @@
             app:layout_constraintTop_toTopOf="@+id/background"
             app:layout_constraintStart_toStartOf="@+id/background"
             app:layout_constraintEnd_toEndOf="@+id/background"
-            android:layout_margin="16dp"
+            android:layout_marginTop="16dp"
     />
     <EditText
-            android:id="@+id/registration_phone"
+            android:id="@+id/phone"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="@string/phone"
             app:layout_constraintTop_toBottomOf="@+id/include_social_network"
             app:layout_constraintStart_toStartOf="@+id/background"
             app:layout_constraintEnd_toEndOf="@+id/background"
             android:layout_marginTop="16dp"
             android:layout_marginHorizontal="16dp"
-            android:textSize="18sp"
-            android:textColor="@color/font_color"
+            style="@style/text_color_and_size"
             android:inputType="phone"
+            android:hint="@string/phone"
     />
     <Button
             android:id="@+id/phone_code_send"
-            android:text="@string/phone_code_send"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/shape_button"
-            app:layout_constraintTop_toBottomOf="@+id/registration_phone"
+            app:layout_constraintTop_toBottomOf="@+id/phone"
             app:layout_constraintStart_toStartOf="@+id/background"
             app:layout_constraintEnd_toEndOf="@+id/background"
             android:layout_marginTop="16dp"
+            android:text="@string/phone_code_send"
     />
     <EditText
-            android:id="@+id/registration_phone_code"
+            android:id="@+id/phone_code"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="@string/phone_code"
             app:layout_constraintTop_toBottomOf="@+id/phone_code_send"
+            app:layout_constraintStart_toStartOf="@+id/phone"
+            app:layout_constraintEnd_toEndOf="@+id/phone"
             android:layout_marginTop="16dp"
-            android:textSize="18sp"
-            android:textColor="@color/font_color"
+            style="@style/text_color_and_size"
             android:inputType="numberPassword"
-            app:layout_constraintStart_toStartOf="@+id/registration_phone"
-            app:layout_constraintEnd_toEndOf="@+id/registration_phone"/>
+            android:hint="@string/phone_code"
+    />
     <Button
-            android:id="@+id/back"
-            android:text="@string/close"
+            android:id="@+id/enter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="@+id/background"
-            android:layout_marginBottom="16dp"
-            android:background="@drawable/shape_button"
-            app:layout_constraintEnd_toEndOf="@+id/background" android:layout_marginEnd="16dp"/>
-    <Button
-            android:id="@+id/ready"
-            android:text="@string/enter"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/phone_code"
+            app:layout_constraintStart_toStartOf="@+id/background"
             app:layout_constraintEnd_toEndOf="@+id/background"
+            android:layout_marginTop="16dp"
             android:background="@drawable/shape_button"
-            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/registration_phone_code"
-            app:layout_constraintStart_toStartOf="@+id/background"/>
+            android:text="@string/enter"
+    />
 </androidx.constraintlayout.widget.ConstraintLayout>
