--- a/app/src/main/res/layout/password_change.xml
+++ b/app/src/main/res/layout/password_change.xml
@@ -11,64 +11,58 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:background="@drawable/shape_card"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_margin="16dp"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintVertical_bias="0.0"
     />
-
     <EditText
-            android:id="@+id/registration_password_1"
+            android:id="@+id/password_1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="@string/password_2"
             app:layout_constraintTop_toTopOf="@+id/background"
             app:layout_constraintStart_toStartOf="@+id/background"
             app:layout_constraintEnd_toEndOf="@id/background"
             android:layout_marginTop="16dp"
             android:layout_marginHorizontal="16dp"
-            android:textSize="18sp"
-            android:textColor="@color/font_color"
+            style="@style/text_color_and_size"
             android:inputType="textPassword|numberPassword"
+            android:hint="@string/password_2"
     />
     <EditText
-            android:id="@+id/registration_password_2"
+            android:id="@+id/password_2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/password_1"
+            app:layout_constraintStart_toStartOf="@+id/password_1"
+            app:layout_constraintEnd_toEndOf="@+id/password_1"
+            android:layout_marginTop="16dp"
+            style="@style/text_color_and_size"
             android:inputType="textPassword|numberPassword"
             android:hint="@string/password_3"
-            app:layout_constraintTop_toBottomOf="@+id/registration_password_1"
-            app:layout_constraintStart_toStartOf="@+id/registration_password_1"
-            app:layout_constraintEnd_toEndOf="@+id/registration_password_1"
-            android:layout_marginTop="16dp"
-            android:textSize="18sp"
-            android:textColor="@color/font_color"
     />
     <EditText
-            android:id="@+id/registration_password_3"
+            android:id="@+id/password_3"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/password_2"
+            app:layout_constraintStart_toStartOf="@+id/password_1"
+            app:layout_constraintEnd_toEndOf="@+id/password_1"
+            android:layout_marginTop="16dp"
+            style="@style/text_color_and_size"
             android:inputType="textPassword|numberPassword"
             android:hint="@string/password_4"
-            app:layout_constraintTop_toBottomOf="@+id/registration_password_2"
-            app:layout_constraintStart_toStartOf="@+id/registration_password_1"
-            app:layout_constraintEnd_toEndOf="@+id/registration_password_1"
-            android:layout_marginTop="16dp"
-            android:textSize="18sp"
-            android:textColor="@color/font_color"
     />
     <Button
-            android:id="@+id/next"
-            android:text="@string/next"
+            android:id="@+id/password_change"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/password_3"
+            app:layout_constraintStart_toStartOf="@+id/background"
             app:layout_constraintEnd_toEndOf="@+id/background"
-            app:layout_constraintBottom_toBottomOf="@+id/background"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginTop="16dp"
             android:background="@drawable/shape_button"
+            android:text="@string/password_change"
     />
 </androidx.constraintlayout.widget.ConstraintLayout>
