--- a/app/src/main/res/layout/password_recovery.xml
+++ b/app/src/main/res/layout/password_recovery.xml
@@ -11,33 +11,34 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:background="@drawable/shape_card"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_margin="16dp"
     />
     <EditText
-            android:id="@+id/registration_mail"
+            android:id="@+id/mail"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="@string/mail_1"
             app:layout_constraintStart_toStartOf="@+id/background"
             app:layout_constraintEnd_toEndOf="@id/background"
+            app:layout_constraintTop_toTopOf="@+id/background"
             android:layout_marginHorizontal="16dp"
-            android:textSize="18sp"
-            android:textColor="@color/font_color"
+            android:layout_marginTop="16dp"
+            style="@style/text_color_and_size"
             android:inputType="textEmailAddress"
-            android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="@+id/background"/>
+            android:hint="@string/mail_1"
+    />
     <Button
-            android:id="@+id/next"
-            android:text="@string/ready"
+            android:id="@+id/password_recovery"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/mail"
+            app:layout_constraintStart_toStartOf="@+id/background"
             app:layout_constraintEnd_toEndOf="@+id/background"
-            app:layout_constraintBottom_toBottomOf="@+id/background"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginTop="16dp"
             android:background="@drawable/shape_button"
+            android:text="@string/password_recovery"
     />
 </androidx.constraintlayout.widget.ConstraintLayout>
