--- a/app/src/main/res/layout/registration_01_phone.xml
+++ b/app/src/main/res/layout/registration_01_phone.xml
@@ -10,103 +10,104 @@
             android:id="@+id/background"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:background="@drawable/shape_card"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             android:layout_margin="16dp"
+            android:background="@drawable/shape_card"
     />
     <EditText
             android:id="@+id/referral_link"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="@id/background"
+            app:layout_constraintStart_toStartOf="@id/background"
+            app:layout_constraintEnd_toEndOf="@id/background"
+            android:layout_marginTop="16dp"
+            android:layout_marginHorizontal="16dp"
+            style="@style/text_color_and_size"
             android:inputType="text"
             android:hint="@string/referral_link"
-            app:layout_constraintStart_toStartOf="@id/background"
-            app:layout_constraintTop_toTopOf="@id/background"
-            app:layout_constraintEnd_toEndOf="@id/background"
-            android:layout_marginHorizontal="16dp"
-            android:layout_marginTop="16dp"
-            android:textSize="18sp"
     />
     <TextView
             android:id="@+id/referral_message"
-            android:text="@string/referral_message"
-            android:textSize="18sp"
-            android:textColor="@color/online"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@+id/referral_link"
             app:layout_constraintStart_toStartOf="@+id/referral_link"
             app:layout_constraintEnd_toEndOf="@+id/referral_link"
             android:layout_marginTop="16dp"
+            android:textColor="@color/online"
+            android:textSize="18sp"
+            android:text="@string/referral_message"
     />
     <include
             android:id="@+id/include_social_network"
             layout="@layout/c_social_network"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/referral_message"
             app:layout_constraintStart_toStartOf="@+id/background"
             app:layout_constraintEnd_toEndOf="@+id/background"
-            android:layout_margin="16dp"
-            app:layout_constraintHorizontal_bias="0.466" android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/referral_message"/>
+            android:layout_marginTop="16dp"
+    />
     <EditText
-            android:id="@+id/registration_phone"
+            android:id="@+id/phone"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="@string/phone"
             app:layout_constraintTop_toBottomOf="@+id/include_social_network"
             app:layout_constraintStart_toStartOf="@+id/background"
             app:layout_constraintEnd_toEndOf="@+id/background"
             android:layout_marginTop="16dp"
             android:layout_marginHorizontal="16dp"
-            android:textSize="18sp"
-            android:textColor="@color/font_color"
+            style="@style/text_color_and_size"
             android:inputType="phone"
+            android:hint="@string/phone"
     />
     <Button
             android:id="@+id/phone_code_send"
-            android:text="@string/phone_code_send"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/shape_button"
-            app:layout_constraintTop_toBottomOf="@+id/registration_phone"
+            app:layout_constraintTop_toBottomOf="@+id/phone"
             app:layout_constraintStart_toStartOf="@+id/background"
             app:layout_constraintEnd_toEndOf="@+id/background"
             android:layout_marginTop="16dp"
+            android:background="@drawable/shape_button"
+            android:text="@string/phone_code_send"
     />
     <EditText
-            android:id="@+id/registration_phone_code"
+            android:id="@+id/phone_code"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="@string/phone_code"
             app:layout_constraintTop_toBottomOf="@+id/phone_code_send"
+            app:layout_constraintStart_toStartOf="@+id/phone"
+            app:layout_constraintEnd_toEndOf="@+id/phone"
             android:layout_marginTop="16dp"
-            android:textSize="18sp"
-            android:textColor="@color/font_color"
+            style="@style/text_color_and_size"
             android:inputType="numberPassword"
-            app:layout_constraintStart_toStartOf="@+id/registration_phone"
-            app:layout_constraintEnd_toEndOf="@+id/registration_phone"/>
+            android:hint="@string/phone_code"
+    />
     <Button
-            android:id="@+id/back"
-            android:text="@string/back"
+            android:id="@+id/bind_account"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/phone_code"
             app:layout_constraintStart_toStartOf="@+id/background"
-            app:layout_constraintBottom_toBottomOf="@+id/background"
-            android:layout_marginStart="16dp"
-            android:layout_marginBottom="16dp"
+            app:layout_constraintEnd_toEndOf="@+id/background"
+            android:layout_marginTop="16dp"
             android:background="@drawable/shape_button"
+            android:text="@string/bind_account"
     />
     <Button
             android:id="@+id/next"
-            android:text="@string/next"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="@+id/background"
+            app:layout_constraintEnd_toEndOf="@+id/background"
             android:layout_marginBottom="16dp"
+            android:layout_marginEnd="16dp"
             android:background="@drawable/shape_button"
-            app:layout_constraintEnd_toEndOf="@+id/background" android:layout_marginEnd="16dp"/>
+            android:text="@string/next"
+    />
 </androidx.constraintlayout.widget.ConstraintLayout>
