--- a/app/src/main/res/layout/registration_02.xml
+++ b/app/src/main/res/layout/registration_02.xml
@@ -10,83 +10,80 @@
             android:id="@+id/background"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:background="@drawable/shape_card"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             android:layout_margin="16dp"
+            android:background="@drawable/shape_card"
     />
     <ImageButton
             android:id="@+id/logo"
             android:layout_width="180dp"
             android:layout_height="180dp"
-            app:srcCompat="@color/background"
-            android:layout_marginTop="16dp"
-            app:layout_constraintEnd_toEndOf="@+id/background"
             app:layout_constraintTop_toTopOf="@+id/background"
             app:layout_constraintStart_toStartOf="@+id/background"
+            app:layout_constraintEnd_toEndOf="@+id/background"
+            android:layout_marginTop="16dp"
+            app:srcCompat="@drawable/ic_user"
     />
     <EditText
             android:id="@+id/surname"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:inputType="text"
-            android:hint="@string/surname"
+            app:layout_constraintTop_toBottomOf="@+id/logo"
             app:layout_constraintStart_toStartOf="@+id/background"
             app:layout_constraintEnd_toEndOf="@+id/background"
-            app:layout_constraintTop_toBottomOf="@+id/logo"
             android:layout_marginTop="16dp"
             android:layout_marginHorizontal="16dp"
-            android:textSize="18sp"
-            android:textColor="@color/font_color"
+            style="@style/text_color_and_size"
+            android:inputType="text"
+            android:hint="@string/surname"
     />
     <EditText
             android:id="@+id/name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:inputType="text"
-            android:hint="@string/name"
             app:layout_constraintTop_toBottomOf="@+id/surname"
             app:layout_constraintStart_toStartOf="@+id/surname"
             app:layout_constraintEnd_toEndOf="@+id/surname"
             android:layout_marginTop="16dp"
-            android:textSize="18sp"
-            android:textColor="@color/font_color"
+            style="@style/text_color_and_size"
+            android:inputType="text"
+            android:hint="@string/name"
     />
     <EditText
             android:id="@+id/middle_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:inputType="text"
-            android:hint="@string/middle_name"
             app:layout_constraintTop_toBottomOf="@+id/name"
             app:layout_constraintStart_toStartOf="@+id/surname"
             app:layout_constraintEnd_toEndOf="@+id/surname"
             android:layout_marginTop="16dp"
-            android:textSize="18sp"
-            android:textColor="@color/font_color"
+            style="@style/text_color_and_size"
+            android:inputType="text"
+            android:hint="@string/middle_name"
     />
     <Button
             android:id="@+id/back"
-            android:text="@string/back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="@+id/background"
             app:layout_constraintBottom_toBottomOf="@+id/background"
-            android:layout_marginStart="16dp"
+            app:layout_constraintStart_toStartOf="@+id/background"
             android:layout_marginBottom="16dp"
+            android:layout_marginStart="16dp"
             android:background="@drawable/shape_button"
+            android:text="@string/back"
     />
     <Button
             android:id="@+id/next"
-            android:text="@string/next"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="@+id/background"
             app:layout_constraintBottom_toBottomOf="@+id/background"
-            android:layout_marginEnd="16dp"
+            app:layout_constraintEnd_toEndOf="@+id/background"
             android:layout_marginBottom="16dp"
+            android:layout_marginEnd="16dp"
             android:background="@drawable/shape_button"
+            android:text="@string/next"
     />
 </androidx.constraintlayout.widget.ConstraintLayout>
