--- a/app/src/main/res/layout/registration_03.xml
+++ b/app/src/main/res/layout/registration_03.xml
@@ -10,56 +10,59 @@
             android:id="@+id/background"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:background="@drawable/shape_card"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             android:layout_margin="16dp"
+            android:background="@drawable/shape_card"
     />
     <EditText
             android:id="@+id/surname"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:inputType="text"
-            android:hint="+79222224623"
-            android:textAlignment="textEnd"
             app:layout_constraintTop_toTopOf="@+id/background"
             app:layout_constraintStart_toStartOf="@+id/background"
-            android:layout_marginHorizontal="16dp"
-            android:textSize="18sp"
-            android:textColor="@color/font_color"
+            app:layout_constraintEnd_toEndOf="@+id/background"
             android:layout_marginTop="16dp"
-            app:layout_constraintEnd_toEndOf="@+id/background"/>
-    <Button
-            android:id="@+id/back"
-            android:text="@string/back"
+            android:layout_marginHorizontal="16dp"
+            style="@style/text_color_and_size"
+            android:textAlignment="textEnd"
+            android:inputType="text"
+            android:hint="@string/phone_number"
+    />
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/floatingActionButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/surname"
             app:layout_constraintStart_toStartOf="@+id/background"
+            app:layout_constraintEnd_toEndOf="@+id/background"
+            android:layout_marginTop="16dp"
+            app:backgroundTint="@color/theme_1_color_1"
+            app:srcCompat="@drawable/ic_plus"
+            android:clickable="true"
+    />
+    <Button
+            android:id="@+id/back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="@+id/background"
-            android:layout_marginStart="16dp"
+            app:layout_constraintStart_toStartOf="@+id/background"
             android:layout_marginBottom="16dp"
+            android:layout_marginStart="16dp"
             android:background="@drawable/shape_button"
+            android:text="@string/back"
     />
     <Button
             android:id="@+id/registration"
-            android:text="@string/registration"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="@+id/background"
             app:layout_constraintBottom_toBottomOf="@+id/background"
-            android:layout_marginEnd="16dp"
+            app:layout_constraintEnd_toEndOf="@+id/background"
             android:layout_marginBottom="16dp"
+            android:layout_marginEnd="16dp"
             android:background="@drawable/shape_button"
+            android:text="@string/registration"
     />
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:clickable="true"
-            app:srcCompat="@drawable/ic_plus"
-            android:id="@+id/floatingActionButton"
-            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/surname"
-            app:layout_constraintStart_toStartOf="@+id/background" app:layout_constraintEnd_toEndOf="@+id/background"
-            app:backgroundTint="@color/theme_1_color_1"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
