--- a/app/src/main/res/layout/account_management_mail_account_tied.xml
+++ b/app/src/main/res/layout/account_management_mail_account_tied.xml
@@ -12,12 +12,12 @@
             android:id="@+id/background"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:background="@drawable/shape_card"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_margin="16dp"
+            android:background="@drawable/shape_card"
     />
     <include
             android:id="@+id/include_social_network"
@@ -27,26 +27,17 @@
             app:layout_constraintTop_toTopOf="@+id/background"
             app:layout_constraintStart_toStartOf="@+id/background"
             app:layout_constraintEnd_toEndOf="@+id/background"
-            android:layout_margin="16dp"
+            android:layout_marginTop="16dp"
     />
     <Button
             android:id="@+id/password_change"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/include_social_network"
+            app:layout_constraintStart_toStartOf="@+id/background"
+            app:layout_constraintEnd_toEndOf="@+id/background"
+            android:layout_marginTop="16dp"
+            android:background="@drawable/shape_button"
             android:text="@string/password_change"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="@+id/background"
-            android:background="@drawable/shape_button"
-            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/include_social_network"
-            app:layout_constraintStart_toStartOf="@+id/background"/>
-    <Button
-            android:id="@+id/close"
-            android:text="@string/close"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/shape_button"
-            app:layout_constraintEnd_toEndOf="@+id/background"
-            app:layout_constraintBottom_toBottomOf="@+id/background"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="16dp"
     />
 </androidx.constraintlayout.widget.ConstraintLayout>
