--- a/app/src/main/res/layout/account_management_mail_account_not_tied.xml
+++ b/app/src/main/res/layout/account_management_mail_account_not_tied.xml
@@ -12,12 +12,12 @@
             android:id="@+id/background"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:background="@drawable/shape_card"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_margin="16dp"
+            android:background="@drawable/shape_card"
     />
     <include
             android:id="@+id/include_social_network"
@@ -27,65 +27,54 @@
             app:layout_constraintTop_toTopOf="@+id/background"
             app:layout_constraintStart_toStartOf="@+id/background"
             app:layout_constraintEnd_toEndOf="@+id/background"
-            android:layout_margin="16dp"
+            android:layout_marginTop="16dp"
     />
     <EditText
             android:id="@+id/mail"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="@string/mail_1"
             app:layout_constraintTop_toBottomOf="@+id/include_social_network"
             app:layout_constraintStart_toStartOf="@+id/background"
             app:layout_constraintEnd_toEndOf="@id/background"
             android:layout_marginTop="16dp"
             android:layout_marginHorizontal="16dp"
-            android:textSize="18sp"
-            android:textColor="@color/font_color"
+            style="@style/text_color_and_size"
             android:inputType="textEmailAddress"
+            android:hint="@string/mail_1"
     />
     <EditText
             android:id="@+id/password_1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="@string/password_1"
             app:layout_constraintTop_toBottomOf="@+id/mail"
             app:layout_constraintStart_toStartOf="@+id/mail"
             app:layout_constraintEnd_toEndOf="@+id/mail"
             android:layout_marginTop="16dp"
-            android:textSize="18sp"
-            android:textColor="@color/font_color"
+            style="@style/text_color_and_size"
             android:inputType="textPassword|numberPassword"
+            android:hint="@string/password_1"
     />
     <EditText
             android:id="@+id/password_2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:inputType="textPassword|numberPassword"
-            android:hint="@string/password_4"
             app:layout_constraintTop_toBottomOf="@+id/password_1"
             app:layout_constraintStart_toStartOf="@+id/mail"
             app:layout_constraintEnd_toEndOf="@+id/mail"
             android:layout_marginTop="16dp"
-            android:textSize="18sp"
-            android:textColor="@color/font_color"
-    />
-    <Button
-            android:id="@+id/close"
-            android:text="@string/close"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/shape_button"
-            app:layout_constraintEnd_toEndOf="@+id/background"
-            app:layout_constraintBottom_toBottomOf="@+id/background"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="16dp"
+            style="@style/text_color_and_size"
+            android:inputType="textPassword|numberPassword"
+            android:hint="@string/password_4"
     />
     <Button
             android:id="@+id/bind_account"
-            android:text="@string/bind_account"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/password_2"
+            app:layout_constraintStart_toStartOf="@+id/background"
+            app:layout_constraintEnd_toEndOf="@+id/background"
+            android:layout_marginTop="16dp"
             android:background="@drawable/shape_button"
-            app:layout_constraintStart_toStartOf="@+id/background" app:layout_constraintEnd_toEndOf="@+id/background"
-            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/password_2"/>
+            android:text="@string/bind_account"
+    />
 </androidx.constraintlayout.widget.ConstraintLayout>
