--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
 	<color name = "black">#111111</color>
 	<color name = "online">#64DD17</color>
 	<color name = "offline">#DD2C00</color>
+	<color name = "message_read">#FF33B5E5</color>
 	<!--
 		100% — FF
 		95% — F2
