--- a/app/src/main/res/layout/c_menu_top_chats_item.xml
+++ b/app/src/main/res/layout/c_menu_top_chats_item.xml
@@ -5,38 +5,28 @@
 	android:layout_width = "match_parent"
 	android:layout_height = "match_parent"
 	tools:context = ".MainActivity">
-	<Button android:id = "@+id/list2"
-		android:layout_width = "32dp"
-		android:layout_height = "32dp"
-		app:layout_constraintTop_toTopOf = "@+id/toolbar"
-		app:layout_constraintBottom_toBottomOf = "@+id/toolbar"
-		app:layout_constraintEnd_toEndOf = "@+id/toolbar"
-		android:layout_margin = "16dp"
-		android:background = "@drawable/ic_search"/>
-	<Button android:id = "@+id/bars2"
+	<TextView android:id = "@+id/toolbar"
+		android:layout_width = "match_parent"
+		android:layout_height = "60dp"
+		app:layout_constraintTop_toTopOf = "parent"
+		android:background = "@color/theme_1_color_1"/>
+	<Button android:id = "@+id/bars"
 		android:layout_width = "32dp"
 		android:layout_height = "32dp"
 		app:layout_constraintTop_toTopOf = "@+id/toolbar"
 		app:layout_constraintBottom_toBottomOf = "@+id/toolbar"
 		app:layout_constraintStart_toStartOf = "@+id/toolbar"
 		android:layout_margin = "16dp"
-		android:background = "@drawable/ic_left"/>
-	<TextView android:id = "@+id/toolbar"
-		android:layout_width = "match_parent"
-		android:layout_height = "60dp"
-		app:layout_constraintTop_toTopOf = "parent"
-		android:background = "@color/theme_1_color_1"/>
+		android:background = "@drawable/ic_back"/>
 	<ImageView android:id = "@+id/avatar"
 		android:layout_width = "40dp"
 		android:layout_height = "40dp"
 		app:layout_constraintTop_toTopOf = "parent"
 		app:layout_constraintBottom_toBottomOf = "@+id/toolbar"
-		app:layout_constraintStart_toEndOf = "@+id/bars2"
-		android:layout_marginTop = "4dp"
-		android:layout_marginBottom = "4dp"
+		app:layout_constraintStart_toEndOf = "@+id/bars"
 		android:layout_marginStart = "16dp"
 		android:background = "@drawable/shape_avatar_2"/>
-	<ImageView android:id = "@+id/online3"
+	<ImageView android:id = "@+id/online"
 		android:layout_width = "16dp"
 		android:layout_height = "16dp"
 		app:layout_constraintTop_toTopOf = "@+id/avatar"
@@ -44,27 +34,33 @@
 		android:layout_marginTop = "26dp"
 		android:layout_marginStart = "26dp"
 		android:background = "@drawable/shape_avatar_badge"/>
-	<TextView android:id = "@+id/vacancy2"
+	<TextView android:id = "@+id/vacancy"
 		android:layout_width = "0dp"
 		android:layout_height = "wrap_content"
 		app:layout_constraintTop_toTopOf = "parent"
 		app:layout_constraintStart_toEndOf = "@+id/avatar"
-		app:layout_constraintEnd_toStartOf = "@+id/list2"
+		app:layout_constraintEnd_toStartOf = "@+id/list"
 		android:layout_marginTop = "8dp"
-		android:layout_marginStart = "16dp"
-		android:layout_marginEnd = "16dp"
+		android:layout_marginHorizontal="16dp"
 		android:textStyle = "bold"
 		android:textColor = "@color/font_color"
 		android:text = "МЕНЕДЖЕР ПО ПРОДАЖАМ"/>
-	<TextView android:id = "@+id/company2"
+	<TextView android:id = "@+id/company"
 		android:layout_width = "0dp"
 		android:layout_height = "wrap_content"
 		app:layout_constraintBottom_toBottomOf = "@+id/toolbar"
 		app:layout_constraintStart_toEndOf = "@+id/avatar"
-		app:layout_constraintEnd_toStartOf = "@+id/list2"
+		app:layout_constraintEnd_toStartOf = "@+id/list"
 		android:layout_marginBottom = "8dp"
-		android:layout_marginStart = "16dp"
-		android:layout_marginEnd = "16dp"
+		android:layout_marginHorizontal="16dp"
 		android:textColor = "@color/font_color"
 		android:text = "ПРАЙД КОМПЬЮТЕРС"/>
+	<Button android:id = "@+id/list"
+		android:layout_width = "32dp"
+		android:layout_height = "32dp"
+		app:layout_constraintTop_toTopOf = "@+id/toolbar"
+		app:layout_constraintBottom_toBottomOf = "@+id/toolbar"
+		app:layout_constraintEnd_toEndOf = "@+id/toolbar"
+		android:layout_margin = "16dp"
+		android:background = "@drawable/ic_search"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
