--- a/app/src/main/res/layout/c_menu_top_chats_item_2.xml
+++ b/app/src/main/res/layout/c_menu_top_chats_item_2.xml
@@ -16,19 +16,30 @@
 		app:layout_constraintTop_toTopOf = "@+id/toolbar"
 		app:layout_constraintBottom_toBottomOf = "@+id/toolbar"
 		app:layout_constraintStart_toStartOf = "@+id/toolbar"
-		android:layout_margin = "16dp"
+		android:layout_marginStart = "16dp"
 		android:background = "@drawable/ic_back"/>
-	<TextView android:id = "@+id/search_view"
+	<TextView android:id = "@+id/vacancy"
 		android:layout_width = "0dp"
 		android:layout_height = "wrap_content"
-		app:layout_constraintTop_toTopOf = "@+id/toolbar"
+		app:layout_constraintTop_toTopOf = "parent"
+		app:layout_constraintStart_toEndOf = "@+id/bars"
+		app:layout_constraintEnd_toStartOf = "@+id/list"
+		android:layout_marginTop = "8dp"
+		android:layout_marginStart = "16dp"
+		android:textStyle = "bold"
+		android:textColor = "@color/font_color"
+		android:text = "МЕНЕДЖЕР ПО ПРОДАЖАМ"/>
+	<TextView android:id = "@+id/company"
+		android:layout_width = "0dp"
+		android:layout_height = "wrap_content"
 		app:layout_constraintBottom_toBottomOf = "@+id/toolbar"
 		app:layout_constraintStart_toEndOf = "@+id/bars"
 		app:layout_constraintEnd_toStartOf = "@+id/list"
+		android:layout_marginBottom = "8dp"
+		android:layout_marginHorizontal = "16dp"
 		android:layout_marginStart = "16dp"
-		android:layout_marginEnd = "16dp"
-		style = "@style/text_color_and_size"
-		android:text = "@string/headline"/>
+		android:textColor = "@color/font_color"
+		android:text = "ПРАЙД КОМПЬЮТЕРС"/>
 	<Button android:id = "@+id/list"
 		android:layout_width = "32dp"
 		android:layout_height = "32dp"
