--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
 	<color name = "colorAccent">#D81B60</color>
 	<color name = "background">#F5F5F5</color>
 	<color name = "theme_1_color_1">#FFC400</color>
+	<color name = "theme_1_color_1_50">#14FFC400</color>
 	<color name = "theme_1_color_2">#FFAB00</color>
 	<color name = "theme_1_card">#FFFDE7</color>
 	<color name = "theme_1_hover">#EBEBEB</color>
@@ -15,26 +16,4 @@
 	<color name = "online">#64DD17</color>
 	<color name = "offline">#DD2C00</color>
 	<color name = "message_read">#FF33B5E5</color>
-	<!--
-		100% — FF
-		95% — F2
-		90% — E6
-		85% — D9
-		80% — CC
-		75% — BF
-		70% — B3
-		65% — A6
-		60% — 99
-		55% — 8C
-		50% — 80
-		45% — 73
-		40% — 66
-		35% — 59
-		30% — 4D
-		25% — 40
-		20% — 33
-		15% — 26
-		10% — 1A
-		5% — 0D
-		0% — 00 -->
 </resources>
