--- a/app/src/main/res/drawable/ic_back.xml
+++ b/app/src/main/res/drawable/ic_back.xml
@@ -4,5 +4,5 @@
 	android:width = "32dp"
 	android:height = "32dp">
 	<path android:fillColor = "@color/font_color"
-		android:pathData = "M9,16.2L4.8,12l-1.4,1.4L9,19 21,7l-1.4,-1.4L9,16.2z"/>
+		android:pathData = "M15.41,16.09l-4.58,-4.59 4.58,-4.59L14,5.5l-6,6 6,6z"/>
 </vector>
