--- a/app/src/main/res/drawable/ic_bars.xml
+++ b/app/src/main/res/drawable/ic_bars.xml
@@ -1,8 +1,8 @@
-<vector
-        android:viewportWidth="448"
-        android:viewportHeight="512"
-        android:width="32dp"
-        android:height="32dp"
-        xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@color/font_color" android:pathData="M16,132h416c8.837,0 16,-7.163 16,-16L448,76c0,-8.837 -7.163,-16 -16,-16L16,60C7.163,60 0,67.163 0,76v40c0,8.837 7.163,16 16,16zM16,292h416c8.837,0 16,-7.163 16,-16v-40c0,-8.837 -7.163,-16 -16,-16L16,220c-8.837,0 -16,7.163 -16,16v40c0,8.837 7.163,16 16,16zM16,452h416c8.837,0 16,-7.163 16,-16v-40c0,-8.837 -7.163,-16 -16,-16L16,380c-8.837,0 -16,7.163 -16,16v40c0,8.837 7.163,16 16,16z"/>
+<vector xmlns:android = "http://schemas.android.com/apk/res/android"
+	android:viewportWidth = "24.0"
+	android:viewportHeight = "24.0"
+	android:width = "32dp"
+	android:height = "32dp">
+	<path android:fillColor = "@color/font_color"
+		android:pathData = "M3,18h18v-2L3,16v2zM3,13h18v-2L3,11v2zM3,6v2h18L21,6L3,6z"/>
 </vector>
