--- a/app/src/main/res/drawable/ic_check_double.xml
+++ b/app/src/main/res/drawable/ic_check_double.xml
@@ -1,8 +1,8 @@
 <vector xmlns:android = "http://schemas.android.com/apk/res/android"
-	android:viewportWidth = "512"
-	android:viewportHeight = "512"
+	android:viewportWidth = "24.0"
+	android:viewportHeight = "24.0"
 	android:width = "32dp"
 	android:height = "32dp">
 	<path android:fillColor = "@color/font_color"
-		android:pathData = "M504.5,171.95l-36.2,-36.41c-10,-10.05 -26.21,-10.05 -36.2,0L192,377.02 79.9,264.28c-10,-10.06 -26.21,-10.06 -36.2,0L7.5,300.69c-10,10.05 -10,26.36 0,36.41l166.4,167.36c10,10.06 26.21,10.06 36.2,0l294.4,-296.09c10,-10.06 10,-26.36 0,-36.42zM166.57,282.71c6.84,7.02 18.18,7.02 25.21,0.18L403.85,72.62c7.02,-6.84 7.02,-18.18 0.18,-25.21L362.08,5.29c-6.84,-7.02 -18.18,-7.02 -25.21,-0.18L179.71,161.19l-68.23,-68.77c-6.84,-7.02 -18.18,-7.02 -25.2,-0.18l-42.13,41.77c-7.02,6.84 -7.02,18.18 -0.18,25.2l122.6,123.5z"/>
+		android:pathData = "M18,7l-1.41,-1.41 -6.34,6.34 1.41,1.41L18,7zM22.24,5.59L11.66,16.17 7.48,12l-1.41,1.41L11.66,19l12,-12 -1.42,-1.41zM0.41,13.41L6,19l1.41,-1.41L1.83,12 0.41,13.41z"/>
 </vector>
