--- a/app/src/main/res/drawable/ic_list.xml
+++ b/app/src/main/res/drawable/ic_list.xml
@@ -1,8 +1,8 @@
-<vector
-        android:viewportWidth="512"
-        android:viewportHeight="512"
-        android:width="32dp"
-        android:height="32dp"
-        xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@color/font_color" android:pathData="M128,116L128,76c0,-8.837 7.163,-16 16,-16h352c8.837,0 16,7.163 16,16v40c0,8.837 -7.163,16 -16,16L144,132c-8.837,0 -16,-7.163 -16,-16zM144,292h352c8.837,0 16,-7.163 16,-16v-40c0,-8.837 -7.163,-16 -16,-16L144,220c-8.837,0 -16,7.163 -16,16v40c0,8.837 7.163,16 16,16zM144,452h352c8.837,0 16,-7.163 16,-16v-40c0,-8.837 -7.163,-16 -16,-16L144,380c-8.837,0 -16,7.163 -16,16v40c0,8.837 7.163,16 16,16zM16,144h64c8.837,0 16,-7.163 16,-16L96,64c0,-8.837 -7.163,-16 -16,-16L16,48C7.163,48 0,55.163 0,64v64c0,8.837 7.163,16 16,16zM16,304h64c8.837,0 16,-7.163 16,-16v-64c0,-8.837 -7.163,-16 -16,-16L16,208c-8.837,0 -16,7.163 -16,16v64c0,8.837 7.163,16 16,16zM16,464h64c8.837,0 16,-7.163 16,-16v-64c0,-8.837 -7.163,-16 -16,-16L16,368c-8.837,0 -16,7.163 -16,16v64c0,8.837 7.163,16 16,16z"/>
+<vector xmlns:android = "http://schemas.android.com/apk/res/android"
+	android:viewportWidth = "24.0"
+	android:viewportHeight = "24.0"
+	android:width = "32dp"
+	android:height = "32dp">
+	<path android:fillColor = "@color/font_color"
+		android:pathData = "M4,10.5c-0.83,0 -1.5,0.67 -1.5,1.5s0.67,1.5 1.5,1.5 1.5,-0.67 1.5,-1.5 -0.67,-1.5 -1.5,-1.5zM4,4.5c-0.83,0 -1.5,0.67 -1.5,1.5S3.17,7.5 4,7.5 5.5,6.83 5.5,6 4.83,4.5 4,4.5zM4,16.5c-0.83,0 -1.5,0.68 -1.5,1.5s0.68,1.5 1.5,1.5 1.5,-0.68 1.5,-1.5 -0.67,-1.5 -1.5,-1.5zM7,19h14v-2L7,17v2zM7,13h14v-2L7,11v2zM7,5v2h14L21,5L7,5z"/>
 </vector>
