--- a/app/src/main/res/drawable/ic_search.xml
+++ b/app/src/main/res/drawable/ic_search.xml
@@ -1,8 +1,8 @@
-<vector
-        android:viewportWidth="512"
-        android:viewportHeight="512"
-        android:width="32dp"
-        android:height="32dp"
-        xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@color/font_color" android:pathData="M505,442.7L405.3,343c-4.5,-4.5 -10.6,-7 -17,-7H372c27.6,-35.3 44,-79.7 44,-128C416,93.1 322.9,0 208,0S0,93.1 0,208s93.1,208 208,208c48.3,0 92.7,-16.4 128,-44v16.3c0,6.4 2.5,12.5 7,17l99.7,99.7c9.4,9.4 24.6,9.4 33.9,0l28.3,-28.3c9.4,-9.4 9.4,-24.6 0.1,-34zM208,336c-70.7,0 -128,-57.2 -128,-128 0,-70.7 57.2,-128 128,-128 70.7,0 128,57.2 128,128 0,70.7 -57.2,128 -128,128z"/>
+<vector xmlns:android = "http://schemas.android.com/apk/res/android"
+	android:viewportWidth = "24.0"
+	android:viewportHeight = "24.0"
+	android:width = "32dp"
+	android:height = "32dp">
+	<path android:fillColor = "@color/font_color"
+		android:pathData = "M15.5,14h-0.79l-0.28,-0.27C15.41,12.59 16,11.11 16,9.5 16,5.91 13.09,3 9.5,3S3,5.91 3,9.5 5.91,16 9.5,16c1.61,0 3.09,-0.59 4.23,-1.57l0.27,0.28v0.79l5,4.99L20.49,19l-4.99,-5zM9.5,14C7.01,14 5,11.99 5,9.5S7.01,5 9.5,5 14,7.01 14,9.5 11.99,14 9.5,14z"/>
 </vector>
