--- a/app/src/main/res/layout/c_chats_message_incoming_item.xml
+++ b/app/src/main/res/layout/c_chats_message_incoming_item.xml
@@ -4,23 +4,64 @@
 	android:layout_width = "match_parent"
 	android:layout_height = "match_parent"
 	android:background = "@drawable/shape_message_incoming">
-	<TextView android:id = "@+id/message"
+	<View android:id = "@+id/divider"
+		android:layout_width = "2dp"
+		android:layout_height = "0dp"
+		app:layout_constraintTop_toTopOf = "@+id/message_quoted"
+		app:layout_constraintBottom_toBottomOf = "@+id/message_quoted"
+		app:layout_constraintStart_toStartOf = "parent"
+		android:layout_marginStart = "16dp"
+		android:background = "@color/theme_1_color_1"
+	/>
+	<TextView android:id = "@+id/message_quoted"
 		android:layout_width = "0dp"
 		android:layout_height = "wrap_content"
 		app:layout_constraintTop_toTopOf = "parent"
+		app:layout_constraintStart_toEndOf = "@+id/divider"
+		app:layout_constraintEnd_toEndOf = "parent"
+		android:layout_marginTop = "12dp"
+		android:layout_marginHorizontal = "16dp"
+		android:layout_marginStart = "16dp"
+		android:textColor = "@color/font_color"
+		android:text = "@string/chats_message_text_quoted_message"/>
+	<ImageView android:id = "@+id/imageView"
+		android:layout_width = "16dp"
+		android:layout_height = "16dp"
+		app:layout_constraintTop_toTopOf = "@+id/message_forwarded"
+		app:layout_constraintBottom_toBottomOf = "@+id/message_forwarded"
+		app:layout_constraintStart_toStartOf = "parent"
+		android:layout_marginStart = "16dp"
+		app:srcCompat = "@drawable/ic_forward_right"/>
+	<TextView android:id = "@+id/message_forwarded"
+		android:layout_width = "0dp"
+		android:layout_height = "wrap_content"
+		app:layout_constraintTop_toBottomOf = "@+id/message_quoted"
+		app:layout_constraintStart_toEndOf = "@+id/imageView"
+		app:layout_constraintEnd_toEndOf = "parent"
+		android:layout_marginTop = "12dp"
+		android:layout_marginStart = "8dp"
+		android:layout_marginEnd = "16dp"
+		android:textColor = "@color/font_color"
+		android:text = "@string/chats_message_text_forwarded_message"
+	/>
+	<TextView android:id = "@+id/message"
+		android:layout_width = "0dp"
+		android:layout_height = "wrap_content"
+		app:layout_constraintTop_toBottomOf = "@+id/message_forwarded"
 		app:layout_constraintStart_toStartOf = "parent"
 		app:layout_constraintEnd_toEndOf = "parent"
 		android:layout_marginTop = "12dp"
 		android:layout_marginHorizontal = "16dp"
 		android:textColor = "@color/font_color"
-		android:text = "@string/chats_message_text_big"/>
+		android:text = "@string/chats_message_text_big"
+		app:layout_constraintHorizontal_bias = "0.125"/>
 	<TextView android:id = "@+id/time"
 		android:layout_width = "wrap_content"
 		android:layout_height = "wrap_content"
 		app:layout_constraintTop_toBottomOf = "@+id/message"
 		app:layout_constraintBottom_toBottomOf = "parent"
 		app:layout_constraintEnd_toEndOf = "parent"
-		android:layout_marginTop = "16dp"
+		android:layout_marginTop = "12dp"
 		android:layout_marginBottom = "12dp"
 		android:layout_marginEnd = "16dp"
 		android:textColor = "@color/font_color"
