--- a/app/src/main/res/layout/c_menu_top_chats_search.xml
+++ b/app/src/main/res/layout/c_menu_top_chats_search.xml
@@ -27,5 +27,5 @@
 		app:layout_constraintBottom_toBottomOf = "@+id/toolbar"
 		app:layout_constraintStart_toStartOf = "@+id/toolbar"
 		android:layout_margin = "16dp"
-		android:background = "@drawable/ic_left"/>
+		android:background = "@drawable/ic_back"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
