--- a/app/src/main/res/layout/chats_message_2.xml
+++ b/app/src/main/res/layout/chats_message_2.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android = "http://schemas.android.com/apk/res/android"
 	xmlns:app = "http://schemas.android.com/apk/res-auto"
+	xmlns:tools = "http://schemas.android.com/tools"
 	android:layout_width = "match_parent"
 	android:layout_height = "match_parent">
 	<include android:id = "@+id/menu"
-		layout = "@layout/c_menu_top_chats_item"
+		layout = "@layout/c_menu_top_chats_item_2"
 		android:layout_width = "0dp"
 		android:layout_height = "wrap_content"
 		app:layout_constraintTop_toTopOf = "parent"
 		app:layout_constraintStart_toStartOf = "parent"
 		app:layout_constraintEnd_toEndOf = "parent"/>
 	<include android:id = "@+id/headline"
-		layout = "@layout/c_chats_message_headline_item"
+		layout = "@layout/c_chats_message_headline_item_2"
 		android:layout_width = "0dp"
 		android:layout_height = "wrap_content"
 		app:layout_constraintTop_toBottomOf = "@+id/menu"
 		app:layout_constraintStart_toStartOf = "parent"
-		app:layout_constraintEnd_toEndOf = "parent"
-	/>
+		app:layout_constraintEnd_toEndOf = "parent"/>
 	<View android:id = "@+id/divider"
 		android:layout_width = "0dp"
 		android:layout_height = "1dp"
@@ -55,4 +55,12 @@
 		android:layout_marginBottom = "16dp"
 		android:layout_marginStart = "16dp"
 		android:layout_marginEnd = "16dp"/>
+	<ImageView android:id = "@+id/imageView2"
+		android:layout_width = "0dp"
+		android:layout_height = "0dp"
+		app:layout_constraintTop_toTopOf = "@+id/message_outgoing"
+		app:layout_constraintBottom_toBottomOf = "@+id/message_outgoing"
+		app:layout_constraintStart_toStartOf = "parent"
+		app:layout_constraintEnd_toEndOf = "parent"
+		app:srcCompat = "@color/theme_1_color_1_50"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
