bottom sheet navigation profile

--- a/app/src/main/res/layout/c_menu_bottom.xml
+++ b/app/src/main/res/layout/c_menu_bottom.xml
@@ -17,6 +17,7 @@
             app:itemIconTint="@drawable/menu_selector"
             app:itemTextColor="@drawable/menu_selector"
             app:labelVisibilityMode="labeled"
+            android:visibility="gone"
     >
     </com.google.android.material.bottomnavigation.BottomNavigationView>
 </androidx.constraintlayout.widget.ConstraintLayout>
